Added html structure and site text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,111 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+      <figure>
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo" /></a>
+      </figure>
+
+      <div class="header-divider">
+        <nav>
+          <ul>
+            <li><a href="faqs/index.html" rel="noopener">FAQ</a></li>
+            <li><a href="about/index.html" rel="noopener">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero-section">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </section>
+
+      <aside>
+        <h2>Want to join the next retreat?</h2>
+        <p>
+          Find out when we are holding our next retreat and how your company or
+          team can sign up!
+        </p>
+        <h3>Find out more</h3>
+        <div class="signup-form">
+          <input type="text" name="name" value="email address"></input>
+          <input type="button" value="Download Itinerary"></input>
+        </div>
+      </aside>
+
+      <section class="features">
+        <h3>Have the work week you always dreamed of - without the bad wifi.</h3>
+        <ul>
+          <li>
+            Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+          </li>
+          <li>
+            12 private rooms with ensuite bathrooms, 2 group meeting rooms, and
+            4 breakout rooms.
+          </li>
+          <li>
+            Private chef team providing on demand meals - just like your team
+            kitchen.
+          </li>
+          <li>
+            5 outdoor obstacle courses, including private beach 1/2 mile from
+            bungalow.
+          </li>
+          <li>
+            Retreat facilitator to manage your day to day activities so you all
+            get a chance to reset.
+          </li>
+          <li>Dedicated computer room for times that you must wifi.</li>
+        </ul>
+      </section>
+
+      <section class="reviews">
+        <h3>Be a better team in 5 days, like this one.</h3>
+        <p>LaCrue Bottling Co.<br> October 2018</p> 
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content"></div>
+        <div class="contact">
+          <address>hello@unplugged.com</address>
+          <address>555-555-5555</address>
+        </div>
+
+        <div class="social">
+          <p>Social</p>
+          <p>
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noopener"
+            ></a>
+          </p>
+          <p>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              rel="noopener"
+            ></a>
+          </p>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>Copyright 202X | Unplugged</p>
+      </div>
+    </footer>
+
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
