--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,120 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <!-- Header -->
+    <header>
+      <div class="content-wrapper">
+        <figure>
+          <a href="#"
+            ><img src="../img/unpluggedlogo.png" alt="unplugged logo"
+          /></a>
+        </figure>
+
+        <div class="header-divider"></div>
+
+        <!--  Nav Menu Section -->
+        <nav>
+          <ul>
+            <li><a href="../index.html" rel="noopener">Home</a></li>
+            <li><a href="../faqs/index.html" rel="noopener">FAQ</a></li>
+            <li><a href="#" rel="noopener">About</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- End of Header -->
+    </header>
+
+    <!-- Main -->
+    <main>
+      <!-- Mission Section -->
+      <section class="mission">
+        <div class="content-wrapper">
+          <div class="mission-content">
+            <h2>
+              Our Mission - we want to make you the team you always wanted to
+              be.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+              accumsan lacus vel facilisis.<br />
+              <br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+              accumsan lacus vel facilisis.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Map Section -->
+      <section class="map">
+        <div class="content-wrapper">
+          <figure class="map-content"></figure>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h2>Contact us, because you all need this.</h2>
+          <div class="contact-content">
+            <div class="contact-info">
+              <h4>General Information</h4>
+              <address>
+                333 Main St, Lake Geneva, WI 53147<br />
+                555-555-5555<br />
+                hello@unplugged.com
+              </address>
+            </div>
+            <div class="contact-info">
+              <h4>Chat with a facilitator</h4>
+              <address>
+                555-555-5555<br />
+                facilitator@unplugged.com
+              </address>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- End of Main -->
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <!-- Contact Section -->
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <p>hello@unplugged.com<br />555-555-5555</p>
+            </address>
+          </div>
+          <!-- Social Section -->
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener"
+                ></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>Copyright 202X | Unplugged</p>
+      </div>
+    </footer>
+
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
