--- a/faqs/index.html
+++ b/faqs/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>FAQ | Unplugged Retreat</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -23,7 +23,100 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <!-- Header -->
+    <header>
+      <div class="content-wrapper">
+        <figure>
+          <a href="#"
+            ><img src="../img/unpluggedlogo.png" alt="unplugged logo"
+          /></a>
+        </figure>
+
+        <div class="header-divider"></div>
+
+        <!--  Nav Menu Section -->
+        <nav>
+          <ul>
+            <li><a href="../index.html" rel="noopener">Home</a></li>
+            <li><a href="#" rel="noopener">FAQ</a></li>
+            <li><a href="../about/index.html" rel="noopener">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- End of Header -->
+
+    <!-- Main -->
+    <main class="FAQ">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What size teams can you accommodate?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <!-- Contact Section -->
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <p>hello@unplugged.com<br />555-555-5555</p>
+            </address>
+          </div>
+          <!-- Social Section -->
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener"
+                ></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>Copyright 202X | Unplugged</p>
+      </div>
+    </footer>
+
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
