Added width and style settings for mobile layout

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Main -->
     <main>
-      <!-- Mission Section -->
+      <!-- Hero Section -->
       <section class="hero-area">
         <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
@@ -72,7 +72,7 @@
         </div>
       </aside>
 
-      <!-- Reviews Section -->
+      <!-- Features Section -->
       <section class="features">
         <div class="content-wrapper">
           <h2>
@@ -155,7 +155,7 @@
       <div class="content-wrapper">
         <div class="footer-content">
           <!-- Contact Section -->
-          <div class="contact">
+          <div class="contact-content">
             <h4>Contact</h4>
             <address>
               <p>hello@unplugged.com<br />555-555-5555</p>
