Added css for tablet to all pages

--- a/faqs/index.html
+++ b/faqs/index.html
@@ -27,9 +27,7 @@
     <header>
       <div class="content-wrapper">
         <figure>
-          <a href="#"
-            ><img src="../img/unpluggedlogo.png" alt="unplugged logo"
-          /></a>
+          <a href="#"><img src="" alt="unplugged logo" /></a>
         </figure>
 
         <div class="header-divider"></div>
@@ -47,7 +45,7 @@
     <!-- End of Header -->
 
     <!-- Main -->
-    <main class="FAQ">
+    <main class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-content">
