--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,8 @@
     <link rel="apple-touch-icon" href="../icon.png" />
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -27,9 +27,7 @@
     <header>
       <div class="content-wrapper">
         <figure>
-          <a href="#"
-            ><img src="../img/unpluggedlogo.png" alt="unplugged logo"
-          /></a>
+          <a href="#"><img src="" alt="unplugged logo" /></a>
         </figure>
 
         <div class="header-divider"></div>
@@ -45,23 +43,23 @@
       </div>
     </header>
     <!-- End of Header -->
-    
+
     <!-- Main -->
     <main>
       <!-- Mission Section -->
       <section class="mission">
         <div class="content-wrapper">
+          <h2>
+            Our Mission - we want to make you the team you always wanted to be.
+          </h2>
           <div class="mission-content">
-            <h2>
-              Our Mission - we want to make you the team you always wanted to
-              be.
-            </h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
               ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-              accumsan lacus vel facilisis.<br />
-              <br />
+              accumsan lacus vel facilisis.
+            </p>
+            <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
               ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
