--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <header>
       <div class="content-wrapper">
         <figure>
-          <a href="#"><img src="" alt="unplugged logo" /></a>
+          <a href="#"
+            ><img src="img/unpluggedlogo.png" alt="unplugged logo"
+          /></a>
         </figure>
 
         <div class="header-divider"></div>
@@ -130,23 +132,32 @@
       <!-- Reviews Section -->
       <section class="reviews">
         <div class="content-wrapper">
-          <h2>Be a better team in 5 days, like this one.</h2>
+          <h2>Be a better team in 5 days,<br />like this one.</h2>
           <article>
-            <p class="fontawesome-icon"></p>
+            <!--<p class="fontawesome-icon"></p>-->
 
-            <h3>
-              LaCrue Bottling Co.<br />
-              October 2018
-            </h3>
+            <figure>
+              <img
+                src="img/unplugged-retreat-lacrue.jpg"
+                alt="Lacrue team photo"
+              />
+            </figure>
 
-            <p class="features-review">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
+            <div>
+              <h3>
+                LaCrue Bottling Co.<br />
+                October 2018
+              </h3>
+
+              <p class="features-review">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.
+              </p>
+            </div>
           </article>
         </div>
       </section>
