--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
       <div class="content-wrapper">
         <div class="footer-content">
           <!-- Contact Section -->
-          <div class="contact-content">
+          <div class="contact">
             <h4>Contact</h4>
             <address>
-              <p>hello@unplugged.com<br />555-555-5555</p>
+              <p>555-555-5555<br />hello@unplugged.com</p>
             </address>
           </div>
 
