Map html and css without .content-wrapper

--- a/about/index.html
+++ b/about/index.html
@@ -78,19 +78,17 @@
 
       <!-- Map Section -->
       <section class="map">
-        <div class="content-wrapper">
-          <figure>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3727.0817828686277!2d-100.74515009999998!3d20.909029100000012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smx!4v1689103435828!5m2!1sen!2smx"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </figure>
-        </div>
+        <figure>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727.0817833500055!2d-100.74773038886723!3d20.90902908063014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b51b030c39001%3A0xd047b2f9edd984b!2sRosewood%20San%20Miguel%20de%20Allende!5e0!3m2!1sen!2smx!4v1689107417766!5m2!1sen!2smx"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </figure>
       </section>
 
       <!-- Contact Section -->
