--- a/about/index.html
+++ b/about/index.html
@@ -18,11 +18,15 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
       rel="stylesheet"
     />
+
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/normalize.css" />
-
+    <script
+      src="https://kit.fontawesome.com/a4e8fca4aa.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="theme-color" content="#fafafa" />
   </head>
 
@@ -80,13 +84,14 @@
       <section class="map">
         <figure>
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727.0817833500055!2d-100.74773038886723!3d20.90902908063014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b51b030c39001%3A0xd047b2f9edd984b!2sRosewood%20San%20Miguel%20de%20Allende!5e0!3m2!1sen!2smx!4v1689107417766!5m2!1sen!2smx"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727.0817833500055!2d-100.74773038886723!3d20.90902908063014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b51b030c39001%3A0xd047b2f9edd984b!2sRosewood%20San%20Miguel%20de%20Allende!5e0!3m2!1sen!2smx!4v1689109027398!5m2!1sen!2smx"
             width="600"
             height="450"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
           ></iframe>
         </figure>
       </section>
