--- a/faqs/index.html
+++ b/faqs/index.html
@@ -18,11 +18,15 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
       rel="stylesheet"
     />
+
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/normalize.css" />
-
+    <script
+      src="https://kit.fontawesome.com/a4e8fca4aa.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="theme-color" content="#fafafa" />
   </head>
 
