--- a/about/index.html
+++ b/about/index.html
@@ -138,13 +138,9 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
-              <p>
-                <a
-                  href="https://www.instagram.com"
-                  target="_blank"
-                  rel="noopener"
-                ></a>
-              </p>
+              <p><i class="fab fa-facebook-f"></i></p>
+              <p><i class="fab fa-twitter"></i></p>
+              <p><i class="fab fa-instagram"></i></p>
             </div>
           </div>
         </div>
