--- a/faqs/index.html
+++ b/faqs/index.html
@@ -109,6 +109,9 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
+              <p><i class="fab fa-facebook-f"></i></p>
+              <p><i class="fab fa-twitter"></i></p>
+              <p><i class="fab fa-instagram"></i></p>
               <p>
                 <a
                   href="https://www.instagram.com"
