Added finishing touch css

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
       <!-- Hero Section -->
       <section class="hero-area">
         <div class="content-wrapper">
-          <h1>
-            Retreat from the desk,<br />
-            return refreshed.
-          </h1>
+          <h1>Retreat from the desk, return refreshed.</h1>
         </div>
       </section>
 
@@ -139,7 +136,7 @@
       <!-- Reviews Section -->
       <section class="reviews">
         <div class="content-wrapper">
-          <h2>Be a better team in 5 days,<br />like this one.</h2>
+          <h2>Be a better team in 5 days, like this one.</h2>
           <article>
             <!--<p class="fontawesome-icon"></p>-->
 
