--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,6 @@
       rel="stylesheet"
     />
 
-    <!-- Place favicon.ico in the root directory -->
-
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <script
@@ -31,7 +29,6 @@
   </head>
 
   <body>
-    <!-- Add your site or application content here -->
     <!-- Header -->
     <header>
       <div class="content-wrapper">
@@ -119,9 +116,8 @@
           </div>
         </div>
       </section>
-
-      <!-- End of Main -->
     </main>
+    <!-- End of Main -->
 
     <!-- Footer -->
     <footer>
@@ -150,6 +146,7 @@
         <p>Copyright 202X | Unplugged</p>
       </div>
     </footer>
+    <!-- End of Footer -->
 
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
