--- a/faqs/index.html
+++ b/faqs/index.html
@@ -19,8 +19,6 @@
       rel="stylesheet"
     />
 
-    <!-- Place favicon.ico in the root directory -->
-
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <script
@@ -31,7 +29,6 @@
   </head>
 
   <body>
-    <!-- Add your site or application content here -->
     <!-- Header -->
     <header>
       <div class="content-wrapper">
@@ -43,7 +40,7 @@
 
         <div class="header-divider"></div>
 
-        <!--  Nav Menu Section -->
+        <!-- Nav Menu Section -->
         <nav>
           <ul>
             <li><a href="../index.html" rel="noopener">Home</a></li>
@@ -93,6 +90,7 @@
         </div>
       </div>
     </main>
+    <!-- End of Main -->
 
     <!-- Footer -->
     <footer>
@@ -121,6 +119,7 @@
         <p>Copyright 202X | Unplugged</p>
       </div>
     </footer>
+    <!-- End of Footer -->
 
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
