--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="header-divider"></div>
 
-        <!--  Nav Menu Section -->
+        <!-- Nav Menu Section -->
         <nav>
           <ul>
             <li><a href="faqs/index.html" rel="noopener">FAQ</a></li>
@@ -53,6 +53,7 @@
         </nav>
       </div>
     </header>
+    <!-- End of Header -->
 
     <!-- Main -->
     <main>
